# basic_chat

./: Cargo.toml
chat_client/: Cargo.toml
chat_client/src/: main.rs
chat_server/: Cargo.toml
chat_server/src/: main.rs
chat_shared/: Cargo.toml
chat_shared/src/: lib.rs
