[package]
name = "chat_client"
version = "0.1.0"
authors = ["Jonathan Spira <jjspira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.0"
async-std = "1"
chat_shared =  { path = "../chat_shared" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] } 
